<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.faxapp.PurchasesActivity"
    tools:showIn="@layout/activity_purchases">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buy_3"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buy_25"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buy_50"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buy_100"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buy_500"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buy_1000"
                android:textColor="@android:color/white" />

            <!--<Button-->
                <!--android:id="@+id/buttonUnlimitedMonth"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:onClick="onClick"-->
                <!--android:text="@string/unlimited_month"-->
                <!--android:textColor="@android:color/white" />-->

            <!--<Button-->
                <!--android:id="@+id/buttonFax2Email"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:onClick="onClick"-->
                <!--android:text="@string/fax2email"-->
                <!--android:textColor="@android:color/white" />-->

            <!--<Button-->
                <!--android:id="@+id/buttonSendReceive"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:onClick="onClick"-->
                <!--android:text="@string/sendandrecive"-->
                <!--android:textColor="@android:color/white" />-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
