<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/phone_number"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/orgsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:src="@drawable/ic_list"
        app:fabSize="mini"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/orgsButton"
        android:layout_toLeftOf="@+id/orgsButton"
        android:layout_toStartOf="@+id/orgsButton"
        android:src="@drawable/ic_contact"
        app:fabSize="mini"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_toLeftOf="@+id/contactButton"
        android:layout_toStartOf="@+id/contactButton"
        android:gravity="right"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:paddingLeft="8dp"
        android:text="contact name"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/textView3"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contact_name"
        android:layout_marginTop="16dp"
        android:text="@string/content"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/pages_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="24dp"
        android:text="@string/pages_count"/>

    <TextView
        android:id="@+id/pages_count_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pages_count_label"
        android:layout_toEndOf="@+id/pages_count_label"
        android:layout_toRightOf="@+id/pages_count_label"
        android:paddingLeft="16dp"
        android:text="0"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_action_add"
        app:fabSize="mini"/>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:textColor="@android:color/white"
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button"/>

        <Button
            android:textColor="@android:color/white"
            android:id="@+id/sendButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_button"/>
    </LinearLayout>

    <ListView
        android:id="@+id/contentListView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonsLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_fab"/>


</RelativeLayout>
